<resources>
    <string name="app_name">RoamTO</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="add_a_place">Add a Place</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="could_not_connect_to_geocoder_services">Could not connect to geocoder services</string>
    <string name="no_coordinates_found">No coordinates found</string>
    <string name="coordinates">Coordinates</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>